@@ -1,7 +1,10 @@
 #ifdef __MINGW32CE__
 
 #include "Evil.h"
+#include "errno.h"
+
 
 int errno = 0;
+
 
 #endif /* __MINGW32CE__ */
